# jemgui

./: .clangd  .gitignore  CMakeLists.txt  readme.md
include/jemgui/: anim.hpp  canvas.hpp  color.hpp  context.hpp  draw.hpp  hash.hpp  input.hpp  jemgui.hpp  layout.hpp  painter.hpp  theme.hpp  types.hpp  widgets.hpp
test/jpico/: CMakeLists.txt  main.cpp
test/jstm/: CMakeLists.txt  main.cpp
